--- a/style.css
+++ b/style.css
@@ -5,8 +5,75 @@
 
 html,
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
 }
 
 /* Add styles here! */
+html {
+  font-size: 18px;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+
+header {
+  padding: 96px 0;
+  border-bottom: 8px solid hsl(0, 0%, 40%);
+}
+
+.max-width-wrapper {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 24px;
+}
+
+.intro-chunk {
+  max-width: 400px;
+}
+
+.intro-chunk .title {
+  font-size: 2rem;
+  margin-bottom: 32px;
+}
+
+.intro-chunk strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+.intro-chunk p {
+  font-size: 1.25rem;
+}
+
+main {
+  background-color: hsl(0, 0%, 60%);
+  padding: 96px 0;
+}
+
+.card {
+  background-color: white;
+  padding: 24px;
+  margin: -24px;
+  border-bottom: 8px solid hsl(0, 0%, 40%);
+}
+
+.indented-heading {
+  background-color: hsl(45, 100%, 50%);
+  margin-left: -32px;
+  margin-top: -16px;
+  padding: 16px 32px;
+  width: fit-content;
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+}
+
+.card p {
+  line-height: 1.4;
+}
+
+.card p:last-child {
+  margin-bottom: 0;
+}
